style.css
/* Color style */
:root {
    --dark-color: #2c2c2c;
    --white-color: #ffffff;
    --light-text-color: #7c7c7c;
    --accent-color: blue;
    --wrong: red;
    --highlight: yellow;
    --background-gray: #cccccc;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* body */
body {
    color: var(--light-text-color);
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6 {
    color: var(--dark-color);
    text-transform: capitalize;
}

b {
    color: var(--dark-color);
}

/* animations */
@keyframes fade-in-upwards {
    0% {
        transform: translateY(50px);
        opacity: 0%;
    }
    100% {
        transform: translateY(0px);
        opacity: 100%;
    }
}

/* navbar */
.navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 20px 100px;
    background: var(--accent-color);
    opacity: .8;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
}

.name {
    font-size: 32px;
    color: var(--white-color);
    font-weight: 700;
    text-decoration: none;
}

.navbarButtons a {
    position: relative;
    font-size: 18px;
    color: var(--white-color);
    font-weight: 600;
    text-decoration: none;
    margin-right: 30px;
}

.navbarButtons a::before {
    content: '';
    position: absolute;
    top: 100%;
    left: 0;
    width: 0;
    height: 2px;
    background: var(--white-color);
    transition: .3s;
}

.navbarButtons a:hover::before {
    width: 100%;
}

/* index / home */

/* home -> hello */
.home-container-intro {
    padding-top: 100px;
    margin-bottom: 40px;
    width: 50%;
    margin-left: 25%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
    
    animation-duration: 3s;
    animation-name: fade-in-upwards;
}

/* .intro-text {
    margin-right: 50px;
} */

.me-img {
    max-height: 500px;
    opacity: 90%;
}

/* home -> programming-knowledge */
.programming-knowledge {
    padding-top: 80px;
    padding-bottom: 100px;
    padding-left: 15%;
    padding-right: 15%;
    background-color: var(--background-gray);
}

.programming-knowledge-title {
    display: flex;
    justify-content: center;
}

.knowledge-container {
    margin-top: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 100px;
    opacity: 0;
}


/* home -> portfolio */
.home-portfolio-title {
    text-align: center;
    margin: 10px;
}

/* home -> work experience */
.home-previous-work-title {
    text-align: center;
    margin: 10px;
}

.work-experiences-container {

}

.work-experience-container {
    border: 2px solid var(--background-gray);
    border-radius: 10px;
    margin: 10px;
    padding: 10px;
}

/* home -> bottom of the page */
.home-end-section {
    width: 100%;
    background-color: var(--background-gray);
    text-align: center;
    padding: 20px;
}

/* game */
.game-container {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 100px;
    color: var(--dark-color);
    margin-left: 20%;
    max-width: 60%;
    font-size: 18px;
}

.game-title {
    display: flex;
    justify-content: center;
}

/* game -> sudoku */
.sudoku-table-container {
    margin: 0px;
    padding: 0px;
}

.sudoku-table {
    width: 100%;
    height: auto;
    aspect-ratio: 1;
    padding: 0px;
    border: 0px;
    margin: 0px;
    border-spacing: 0;
    border: 1px solid var(--dark-color);
    tr {
        padding: 0px;
        border: 0px;
        margin: 0px;
    }
    td {
        width: 33%;
        aspect-ratio: 1;
        padding: 0px;
        margin: 0px;
    }
}

.sudoku-table-3x3{
    width: 100%;
    height: auto;
    aspect-ratio: 1;
    margin: 0px;
    padding: 0px;
    border-spacing: 0;
    border: 1px solid var(--dark-color);
    border-collapse: collapse;

    td {
        width: 33%;
        height: 33%;
        aspect-ratio: 1;
        border: 1px solid var(--dark-color);
        text-align: center;
        font-size: 20px;
    }

    td:focus {
        background-color: var(--highlight);
    }
}

.sudokuIncorrectValue {
    background-color: var(--wrong);
}

.number-selection-buttons-container {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5px;
    gap: 5px;
}

.sudoku-button-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
}

.number-selection {
    padding: 5px;
}

.SudokuInitialNumber {
    font-weight: bolder;
    font-size: 20px;
    font-style: italic;
}

.sudoku-player-stats {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-left: 1%;
    margin-right: 1%;
}

/* algorithms */
.algorithms-title {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding-top: 100px;
    color: var(--dark-color);
}

.algorithms-container {
    width: 60%;
    margin-left: 20%;
    margin-bottom: 50px;
}

.algorithm-container {
    margin-top: 20px;
    border: 2px solid var(--accent-color);
    border-radius: 10px;
    overflow: hidden; 
}

.algorithm-code {
    max-height: 60vh;
    overflow-y: auto;
    padding: 0px 0px 0px 0px;
}

.algorithm-title {
    margin-left: 10px;
    padding-bottom: 5px;
}

.algorithm-languages-buttons {
    margin-bottom: 5px;
}

.algorithm-language-button {
    margin-left: 10px;
    text-transform: capitalize;
}

/* portfolio */
.portfolio {
    margin-top: 100px;
}

/* portfolio -> portfolio-summary */
.portfolio-projects-summary-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.portfolio-projects-summary-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
}

.portfolio-project-summary-container {
    margin: 20px;
    padding: 10px;
    max-width: 30vw;
    max-height: 30vh;
    border: 2px solid var(--accent-color);
    border-radius: 15px;
    overflow: hidden; 
    display: flex;
    justify-content: center;
}

.portfolio-project-summary-img {
    max-width: 33%;
    max-height: 95%;
    border-radius: 10px;
}

.portfolio-project-summary-text {
    margin: 20px;
}

/* portfolio -> portfolio-details */
.portfolio-projects-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.portfolio-project-container {
    margin: 20px;
    padding: 10px;
    max-width: 90vw;
    max-height: 80vh;
    border: 2px solid var(--accent-color);
    border-radius: 15px;
    overflow: hidden; 
    display: flex;
    justify-content: center;
}

.portfolio-project-img {
    max-width: 30vw;
    max-height: 95%;
    border-radius: 10px;
}

.portfolio-project-text {
    margin: 20px;
}

